--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.HandoverRider"
         tools:targetApi="31">
         <activity
-            android:name=".StarterActivity"
+            android:name=".view.activity.StarterActivity"
             android:exported="false" />
         <activity
             android:name=".RiderApplication"
